<resources>
    <string name="app_name">WonderDroid Ultra</string>
    <string name="crash_string">WonderDroid Ultra crashed!</string>
    <string name="noroms">No ROMs found… press + to add some.</string>
    <string name="nosdcard">The storage drive (for example, SD card) containing game data is unavailable.</string>
    <string name="colour">Color —\u00A0</string>
    <string name="mono">Monochrome —\u00A0</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="selectgame">Exit Game</string>
    <string name="exit">Exit</string>
    <string name="preferences">Preferences</string>
    <string name="importgame">Import Game</string>
    <string name="togglescreencontrols">Toggle Touch Controls</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="settings_cat_controls">Hardware controls</string>
    <string name="control_x2">X2 (Right)</string>
    <string name="control_x3">X3 (Down)</string>
    <string name="control_x4">X4 (Left)</string>
    <string name="control_x1">X1 (Up)</string>
    <string name="set">Set</string>
    <string name="clear">Clear</string>
    <string name="pressakey">Press a key</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="bloodtype">Blood type</string>
    <string name="settings_cat_ws">WonderSwan profile</string>
    <string name="name">Name</string>
    <string name="overriderompath">ROM path</string>
    <string name="overridemempath">Save path</string>
    <string name="emulatorsettings">Preferences</string>
    <string name="enablesound">Enable sound</string>
    <string name="showcontrols">Show controls automatically</string>
    <string name="showcontrolsdescription">When starting a game</string>
    <string name="onscreencontrolsettings">Touchscreen controls</string>
    <string name="vibratedown">Button-down vibration</string>
    <string name="vibratedowndescription">When pressing a touchscreen control</string>
    <string name="vibrateup">Button-up vibration</string>
    <string name="vibrateupdescription">When releasing a touchscreen control</string>
    <string name="relocate">Relocate Start to top-right</string>
    <string name="relocatedescription">Requires emulator restart</string>
    <string name="graphicssettings">Graphics</string>
    <string name="frameskip">Frame skip</string>
    <string name="frameskipdescription">Skip one out of every how many frames?</string>
    <string name="sharpness">Screen sharpness</string>
    <string name="sharpnessdescription">Requires emulator restart</string>
    <string name="orientationdescription">May require emulator restart; not for vertical WS games</string>
    <string name="reversehorizontalorientation">Reverse horizontal orientation</string>
    <string name="stretchtofill">Stretch to fill screen</string>
    <string name="stretchtofilldescription">Does not apply to portrait orientation</string>
    <string name="showbackground">Show game select background</string>
    <string name="showbackgrounddescription">Disable for smoother scrolling</string>
    <string name="about">About</string>
    <string name="aboutdescription">Developed by Willie Chang\nPublished by Yearbook Labs\nWonderDroid is originally written by Daniel Palmer.\nLicensed under GPL 2.0\nPowered by Mednafen. Includes software from Cygne, Bryan McPhail\'s NEC V30MZ emulator, Blip_Buffer, and Charles MacDonald\'s SMS Plus.\nCertain design based on OpenEmu.\nOriginal icon designed by Bostwickenator on DeviantArt.\nCertain icons made by Freepik and Vaadin from www.flaticon.com, with typeface by Sammi De Guzman.\nJapanese translation by volunteer users (thank you!).</string>
    <string name="visit">Visit our website</string>
    <string name="close">Close</string>
    <string name="report">Report an issue</string>
    <string name="reportdescription">If you are having performance issues, try changing the frame skip and sharpness first. If this does not help, or you are having another issue, please let us know. Thanks!</string>
    <string name="issues">GitHub Issues</string>
    <string name="moreapps">More YL apps</string>
    <string name="cannotopenurl">Cannot find your browser</string>
    <string name="cannotopenurldescription">But don\'t worry, we\'ve copied the URL to your clipboard. Simply paste it into your browser\'s address bar.</string>
    <string name="sdcardinfo">Help on using SD cards</string>
    <string name="rompatherror">ROM Path Error</string>
    <string name="rompatherrordescription">The path ??? is unavailable. Please enter a different path in Preferences.</string>
    <string name="mempatherror">Save Path Error</string>
    <string name="mempatherrordescription">The path ??? is unavailable or read-only. Please enter a different path in Preferences.</string>
    <string name="gotopreferences">Go to Preferences</string>
    <string name="readmemfileerror">Cannot read save file</string>
    <string name="writememfileerror">Cannot write save file</string>
    <string name="helptranslate">\u00A0\u00A0\u00A0Help translate to Japanese 幫忙翻到日文 »</string>
    <string name="needpermissions">Please turn on the file access permission for WonderDroid X in your device settings.</string>
    <string name="askpermissions">File access permission is required for reading ROMs.</string>
    <string name="ok">OK</string>
    <string name="cannotloadrom">Cannot load ROM. Please try again.</string>
    <string name="savestate">Save State</string>
    <string name="loadstate">Load State</string>
    <string name="auto">Auto</string>
    <string name="undo">Undo</string>
    <string name="slot">Slot</string>
    <string name="empty">Empty</string>
    <string name="memreplaceprompt">Warning: the state you are loading includes a cartridge save that is different from the current one. Replace your current cartridge save?</string>
    <string name="replace">Yes, replace</string>
    <string name="keep">No, keep current</string>
    <string name="statewarning">[1] State saving and loading are experimental features. We recommend you back up your cartridge saves in ??? regularly.\n[2] When loading a state, if its corresponding cartridge save is different from the current cartridge save, the latter will be replaced.\n[3] Loading a state occasionally causes the game to freeze or crash. If this happens, please try loading the state again.</string>
    <string name="understand">I understand</string>
    <string name="mapcontrols">Map controls…</string>
    <string name="mapcontrolsdescription">For keyboards and other input peripherals</string>
    <string name="swapab">Swap A + B buttons</string>
    <string name="sizeposition">Size and position…</string>
    <string name="abposition">A + B position</string>
    <string name="sidebyside">Side by side</string>
    <string name="topbottom">Top-bottom</string>
    <string name="diagonal">Diagonal</string>
    <string name="opacity">Opacity</string>
    <string name="buttoncolor">Button color</string>
    <string name="showbuttonlabels">Show button labels</string>
    <string name="upgrade_welcome">WonderDroid X is now WonderDroid Ultra! In addition to WonderSwan games, you will be able to play Game Gear, Turbografx 16 / PC Engine (cartridges only), and Neo Geo Pocket games.</string>
    <string name="upgrade_prompt_1">Now, let\'s add your WonderSwan games from WonderDroid X to WonderDroid Ultra. On the next screen, please confirm your WonderDroid X ROMs folder. You won\'t need it anymore afterwards, because WonderDroid Ultra uses an internal folder to store games and save files.</string>
    <string name="upgrade_prompt_2">Note: Game states from WonderDroid X are not compatible with WonderDroid Ultra and will not be transferred. If you have important game states, please contact us at http://yearbooklabs.com/support/ for assistance.</string>
    <string name="select_drive_prompt">Please select a drive to store your games and save files. Make sure it has enough space.</string>
    <string name="next">Next</string>
    <string name="refresh">Refresh</string>
    <string name="free_total">free, total</string>
    <string name="in_use">selected</string>
    <string name="add_a_game">Add a game</string>
    <string name="add_a_game_note">Supported file extensions: .ws. .wsc, .gg, .pce, .ngp, .ngc, and .zip containing files with any of the preceding extensions. You can also add save files (.sav and .mem), states (.sav and .mc[0-5,9]), and box art (.jpg and .png) for games already added.</string>
    <string name="select_file">Select file…</string>
    <string name="scan_folder">Add all games in a folder</string>
    <string name="scan_folder_note">Due to restrictions set by Android, not all folders can be scanned.</string>
    <string name="select_folder">Select folder…</string>
    <string name="scan_folder_note_rescan">You can also rescan the last folder you selected:</string>
    <string name="rescan_folder">Rescan folder</string>
    <string name="include_subfolders">Include subfolders</string>
    <string name="overwrite">Overwrite files with identical names</string>
    <string name="copy_mode">Copy mode (keep original files)</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="transfer">Transfer</string>
    <string name="errors">Done with errors</string>
    <string name="remaining">remaining</string>
    <string name="scanning">Scanning…</string>
    <string name="in_progress">In progress</string>
    <string name="pending">Pending</string>
    <string name="canceled">Canceled</string>
    <string name="file_error">File error, press for details</string>
    <string name="file_exists">File already exists but overwrite is OFF</string>
    <string name="file_exists_description">Files with identical names are not overwritten by default. If you want to overwrite the existing file, please turn on the switch labeled "Overwrite files with identical names" at the bottom of the Add Games screen.</string>
    <string name="game_select_view">Game selection view</string>
    <string name="gallery_view">Gallery view</string>
    <string name="list_view">List view</string>
    <string name="grid_view">Grid view</string>
    <string name="game_select_sort">Sort games</string>
    <string name="date_added_sort">By most recently added</string>
    <string name="date_played_sort">By most recently played</string>
    <string name="alpha_sort">Alphabetically</string>
    <string name="reverse_sort">Sort in reverse</string>
    <string name="storage_error">Drive is inaccessible or unusable. If it\'s an SD card, make sure it\'s attached. Otherwise, select another drive to use.</string>
    <string name="select_drive">Change drive</string>
    <string name="upgrade_save_warning">Your save files may not have been transferred. Press +, then Select Folder, and choose your save folder.</string>
    <string name="openvgdb">Box art database (OpenVGDB)</string>
    <string name="privacy">We do not collect any usage data. However, to download box art for the game selection screen, it is necessary to transmit game titles to third-party services. This feature is optional; check the box below to opt out.</string>
    <string name="no_boxart">Do NOT download box art</string>
    <string name="unrecognized_extension">Unrecognized extension</string>
    <string name="orientation">Orientation</string>
    <string name="language">Digimon Battle Spirit &amp; NGP language</string>
    <string name="please_wait">Please wait…</string>
    <string name="rename_game">Rename game</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="delete">Delete</string>
    <string name="back_up">Back up</string>
    <string name="help">Help</string>
</resources>