<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    
    <PreferenceCategory android:title="@string/settings_cat_controls">

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolX1"
            android:title="@string/control_x1" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolX2"
            android:title="@string/control_x2" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolX3"
            android:title="@string/control_x3" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolX4"
            android:title="@string/control_x4" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolY1"
            android:title="Y1" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolY2"
            android:title="Y2" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolY3"
            android:title="Y3" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolY4"
            android:title="Y4" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolA"
            android:title="A" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolB"
            android:title="B" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolStart"
            android:title="Start/Run" />

        <com.atelieryl.wonderdroid.views.HardwareButtonPreference
            android:key="hwcontrolSelect"
            android:title="Select" />
    
    </PreferenceCategory>
    
</PreferenceScreen>